# ML-Coding-Interview-Preparation

./: .gitignore  README.md  chatbot-design.py  contact-centre-call-summarization.py  json-parsing.py  llm-as-a-judge.py  llm-tool-calling-banking.py  llm-tool-calling-langchain.py  llm-tool-calling.py  main.py  multi-step-tool-calling-agent.py  pii-masking.py  pyproject.toml  reflection-design-pattern.py  regression.py  router.py  text-image-retrieval.py  text-to-sql.py  topic-modeling.py
Anomaly_detection/: creditcard-fraud-anomaly-genai.py  creditcard-fraud-anomaly.py
Classification/: classification-BERT.py  classification.py
Clustering/: clustering.py
RAG/: rag-langchain.py
RAG/faiss_index/: index.pkl
case-studies/: contact-centre-call-summarization.py  credit-card-fraud.py  customer-churn-prediction.py  customer-segmentation.py  genai-fraud-detection.py  internal-policy-qa.py  loan-default.py  transaction-anomaly.py
data-preprocessing/: data-preparation.py  messy_transactions.csv
faiss_index/: index.faiss
